--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,29 @@
 {
     "name": "PWA Template",
-    "id": "/",
     "short_name": "PWA",
     "description": "A simple progressive web app template",
-    "start_url": "/",
+    "id": "/pwa-test/",
+    "start_url": "/pwa-test/",
+    "scope": "/pwa-test/",
     "display": "standalone",
     "background_color": "#303030",
     "theme_color": "#484848",
     "icons": [
         {
-            "src": "icon.png",
+            "src": "/pwa-test/icon.png",
             "sizes": "256x256",
             "type": "image/png"
         }
     ],
     "screenshots": [
         {
-            "src": "screenshot-wide.png",
+            "src": "/pwa-test/screenshot-wide.png",
             "sizes": "1280x720",
             "type": "image/png",
             "form_factor": "wide"
         },
         {
-            "src": "screenshot-mobile.png",
+            "src": "/pwa-test/screenshot-mobile.png",
             "sizes": "640x1136",
             "type": "image/png"
         }
