off screen test

--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,8 @@
     "start_url": "/pwa-test/",
     "scope": "/pwa-test/",
     "display": "fullscreen",
-    "background_color": "#FF0000",
-    "theme_color": "#FF0000",
+    "background_color": "#000000",
+    "theme_color": "#000000",
     "icons": [
         {
             "src": "/pwa-test/icon.png",
