--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "id": "/pwa-test/",
     "start_url": "/pwa-test/",
     "scope": "/pwa-test/",
-    "display": "fullscreen",
+    "display": "standalone",
     "background_color": "#000000",
     "theme_color": "#000000",
     "icons": [
